<resources>
    <string name="app_name">Taller_ListView</string>
    <string name="areas">Areas</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>

    <string name="volumenes">Volumenes</string>

    <string name="op_realizadas">Opciones realizadas</string>

    <string name="resultado">Resultado</string>
    <string name="area">Area:</string>
    <string name="no">No</string>
    <string name="operacion">Operacion</string>
    <string name="dato">Datos</string>
    <string name="area_cuadrado">Area del cuadrado</string>
    <string name="datos">Datos</string>

    <string name="valor_lado">Valor del lado:</string>
    <string name="calcular">Calcular</string>
    <string name="cuadrado1">Cuadrado</string>
    <string name="borrar">Borrar</string>
    <string name="error">No puede estar vacio, el campo</string>
    <string name="area_circulo"> Radio del circulo</string>
    <string name="raido">Valor del radio:</string>
    <string name="circulo1">Circulo</string>
    <string name="lado">Lado: </string>
    <string name="radio">Radio :</string>
    <string name="base">valor de la base</string>
    <string name="altura">valor de la altura</string>
    <string name="base1"> Base :</string>
    <string name="altura1">Altura :</string>
    <string name="area_triangulo">Area del triangulo </string>
    <string name="area_rectangulo">Area del rectangulo </string>
    <string name="esfera">Esfera</string>
    <string name="esfera_area">Area de la Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="are_cilindro">Area del cilindro </string>
    <string name="are_cono">Area del cono </string>
    <string name="are_cubo">Area del cubo </string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="area_cubo">Area del Cubo</string>
    <string name="arista">Valor de la arista</string>
    <string name="error_1">Ingrese valor mayor a cero</string>
    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/op_realizadas</item>
    </string-array>
    <string-array name="opciones2">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="opciones3">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>


</resources>
